Fixed land modal view on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -431,6 +431,7 @@ img {
     display: flex;
     align-items: center;
     flex-direction: row;
+    flex-wrap: wrap;
     h1 {
       text-transform: capitalize;
     }
